--- a/config/deploy/shared/unicorn.rb.erb
+++ b/config/deploy/shared/unicorn.rb.erb
@@ -1,10 +1,10 @@
-root = '/home/deployer/apps/focusedfitness/current'
+root = "<%= current_path %>"
 working_directory root
 pid "#{root}/tmp/pids/unicorn.pid"
 stderr_path "#{root}/log/unicorn.log"
 stdout_path "#{root}/log/unicorn.log"
 
-listen "/var/sockets/unicorn.<%= fetch(:full_app_name) %>.sock"
+listen "/tmp/unicorn.<%= fetch(:full_app_name) %>.sock"
 worker_processes <%= fetch(:unicorn_worker_count) %>
 timeout 40
 preload_app true
