--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,29 @@
  *= require_self
  */
 
+
+/*  @font-face {
+  font-family: 'Glyphicons Halflings';
+  src:  asset-url('glyphicons-halflings-regular.eot');
+  src: asset-url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+       asset-url('glyphicons-halflings-regular.woff') format('woff'),
+       asset-url('glyphicons-halflings-regular.ttf') format('truetype'),
+       asset-url('glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+*/
+
+body{
+  padding-top: 50px;
+}
+@font-face {
+    font-family: 'Glyphicons Halflings';
+    src:  url(font-path('glyphicons-halflings-regular.eot'));
+    src: url(font-path('glyphicons-halflings-regular.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('glyphicons-halflings-regular.woff')) format('woff'),
+         url(font-path('glyphicons-halflings-regular.ttf'))  format('truetype'),
+         url(font-path('glyphicons-halflings-regular.svg') + "#glyphicons_halflingsregular") format('svg');
+}
+
+footer .nav {
+  margin-bottom: 0;
+}
