--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,1 +1,36 @@
 @import "../../../vendor/assets/stylesheets/_bootstrap.scss";
+
+
+
+/* main page */
+.head{
+  color: #fff;
+  background-color: #222;
+}
+
+.foot{
+  background-color: #222;
+  color: #fff;
+}
+
+/*.faq, .about{
+  margin-top:30px;
+  padding-bottom: 30px;
+}*/
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+/*  @extend .control-group;
+  @extend .error;*/
+ }
+
+ .error_messages{
+  color: red;
+ }
