just text updates

--- a/app/views/home/faq.html.haml
+++ b/app/views/home/faq.html.haml
@@ -14,28 +14,187 @@
           .panel-heading
             %h4.panel-title
               %a{:href => "#collapse-1", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
-                faq 1
+                What is the best exercise program for diabetics?
           #collapse-1.panel-collapse.collapse.in
             .panel-body
               %p
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum soluta necessitatibus eaque nesciunt voluptates quod quos. Animi ipsam vero est quam ipsum laudantium dignissimos modi magnam optio consequatur id quia!
+                Perhaps the right term isn’t ‘best’ but rather appropriate.  For most Type 2 diabetics that means a program that combines cardio exercise to keep your heart healthy with resistance exercise to increase muscle mass
 
         .panel.panel-default
           .panel-heading
             %h4.panel-title
               %a{:href => "#collapse-2", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
-                faq 2
+                Why do we need to increase muscle mass?
           #collapse-2.panel-collapse.collapse
             .panel-body
               %p
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum soluta necessitatibus eaque nesciunt voluptates quod quos. Animi ipsam vero est quam ipsum laudantium dignissimos modi magnam optio consequatur id quia!
+                We all lose muscle mass as we age particularly after we pass 50.  The more muscle mass we have the more calories we burn to feed that muscle mass, even while we sleep.
 
         .panel.panel-default
           .panel-heading
             %h4.panel-title
               %a{:href => "#collapse-3", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
-                faq 3
+                Does that mean I can eat more?
           #collapse-3.panel-collapse.collapse
             .panel-body
               %p
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum soluta necessitatibus eaque nesciunt voluptates quod quos. Animi ipsam vero est quam ipsum laudantium dignissimos modi magnam optio consequatur id quia!
+                It means you can eat more of the right things within reason
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-4", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What will a typical session at the gym be like?
+          #collapse-4.panel-collapse.collapse
+            .panel-body
+              %p
+                A typical one hour session will include approximately 15 minutes of cardio, 35 minutes of resistance exercise and 10 minutes of functional and/or abdominal exercise.
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-5", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What is resistance exercise?
+          #collapse-5.panel-collapse.collapse
+            .panel-body
+              %p
+                Anaerobic exercise utilizing free weights, cable machines or your own body weight
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-6", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What is functional exercise?
+          #collapse-6.panel-collapse.collapse
+            .panel-body
+              %p
+                Exercise designed to increase function in everyday life including stamina, strength and balance
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-7", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Do I need to go on a diet?
+          #collapse-7.panel-collapse.collapse
+            .panel-body
+              %p
+                We don’t believe in diets, we believe in choosing a healthy manageable nutritional lifestyle.  I never suggest to clients that they change their eating habits and begin an exercise program at the same time.  That’s sure to set you up to fail.  Rather one day you’re going to look at that donut in your hand and say, ‘Why am I eating this?’  I guarantee it.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-8", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What is a healthy manageable nutritional lifestyle?
+          #collapse-8.panel-collapse.collapse
+            .panel-body
+              %p
+                Learning to respect your body and what you put into it.  You can eat what you like as long as you understand what effect it has on your body both long and short term.
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-9", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Don’t I need more cardio than 15 minutes three times/week to lose weight and get my sugar under control?
+          #collapse-9.panel-collapse.collapse
+            .panel-body
+              %p
+                Yes, but then do you want to pay me to watch you run on a treadmill or do you want me to train you?
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-10", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What is the right exercise program for healthy people over 50?
+          #collapse-10.panel-collapse.collapse
+            .panel-body
+              %p
+                The truth is for those of us over 50 the best program takes three approaches and a commitment to excellence.  The optimal program is two days of cardio-, running, biking or swimming, two days of resistance training and one day of sport.  So you’ve got to stay committed.  Whether you come to us one, two or three days a week we’re there to help you reach your goal.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-11", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                How is my program individually tailored to me?
+          #collapse-11.panel-collapse.collapse
+            .panel-body
+              %p
+                We build your program around your needs and your likes and dislikes.  You like to play tennis?  We’ll help you to do that.  You want to increase your muscle mass?  We’ll do that.  It’s all about you
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-12", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                How is my program individually tailored to me?
+          #collapse-12.panel-collapse.collapse
+            .panel-body
+              %p
+                We build your program around your needs and your likes and dislikes.  You like to play tennis?  We’ll help you to do that.  You want to increase your muscle mass?  We’ll do that.  It’s all about you
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-13", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Is twice/week enough to make serious changes to my body?
+          #collapse-13.panel-collapse.collapse
+            .panel-body
+              %p
+                If you are otherwise healthy two sessions a week, one upper body and one lower body combining body and free weight resistance will over an appropriate period of time give you the body line you want.  Of course if you’d like to come more frequently we’d be happy to see you
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-14", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                How long will it take?
+          #collapse-14.panel-collapse.collapse
+            .panel-body
+              %p
+                Depending on your weight and physical condition anywhere from six months to one year.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-15", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Don’t I need cardio exercise to shape my body?
+          #collapse-15.panel-collapse.collapse
+            .panel-body
+              %p
+                You need cardio exercise as a part of any healthy lifestyle.  We don’t think you want to pay us to watch you run on a treadmill.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-16", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                I don’t want to “Bulk-up”.
+          #collapse-16.panel-collapse.collapse
+            .panel-body
+              %p
+                Ladies first.  You won’t “bulk up” but you will develop beautiful lines and more strength.  To “bulk up” you would have to lift heavy weights five days a week for two hours a day for about two years.  That’s not what you’ll be doing.  And men?  Why wouldn’t you want to bulk up?  The ladies love it!
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-17", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Will I have to change my diet?
+          #collapse-17.panel-collapse.collapse
+            .panel-body
+              %p
+                We will discuss that.  First we have to know what you’re eating.
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-18", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                How does the teen program differ from adult programs?
+          #collapse-18.panel-collapse.collapse
+            .panel-body
+              %p
+                Teens are still growing.  They require more cardio and sport and less resistance training therefore their programs contain more of those components.
