--- a/app/views/home/programs.html.haml
+++ b/app/views/home/programs.html.haml
@@ -12,15 +12,44 @@
           %img{:src=>""}
         .media-body
           %h4.media-heading
-            Program #1
+            1.  Diabetes Management and/or Prevention
           %p
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi architecto molestias accusantium omnis odit cumque neque nostrum suscipit optio laudantium qui error delectus unde corporis rem consequuntur quidem. Vero beatae.
+            Are you diabetic or ‘pre-diabetic? Does diabetes run in your family?  Let someone who has traveled that road help you.  Our diabetes management and prevention program has proven results.  By combining a proper regimen of appropriate exercise with a rational, manageable nutrition program we can help you to control your diabetes rather than let it control you.  The right combination of cardio-, resistance and functional exercise will build muscle mass, reduce body fat and strengthen overall lifestyle performance.  Three easy sessions a week planned according to your busy schedule.
 
       .media
         %a.media-left.media-middle{:href=>"#"}
           %img{:src=>""}
         .media-body
           %h4.media-heading
-            Program #2
+            2.  Maintaining General Health past 50
           %p
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi architecto molestias accusantium omnis odit cumque neque nostrum suscipit optio laudantium qui error delectus unde corporis rem consequuntur quidem. Vero beatae.
+            In reasonably good health but want to get back to feeling great?  It’s easier than you think.  We will design an exercise program for you both in and out of the gym to meet your needs, exercise preferences and schedule while optimizing your time; once, twice or three times a week.  We specialize in mature adults.  Once we pass 50 our bodies change and our needs change.  Our programs keep that in mind while tailoring your program to what you enjoy to keep you interested and enthusiastic.
+
+      .media
+        %a.media-left.media-middle{:href=>"#"}
+          %img{:src=>""}
+        .media-body
+          %h4.media-heading
+            3.  Body Sculpting for Women
+          %p
+            At any age women seek to keep their bodies healthy and trim.  Light resistance exercise with both body weight and light free weights is the best way to achieve that goal in conjunction with the correct amount of cardio.  This twice a week program focuses on providing you with the body line you want.  No fear of ‘bulking-up’ here.  That’s for the guys.  We know how to give you that feminine line from the shoulder on down.
+
+
+      .media
+        %a.media-left.media-middle{:href=>"#"}
+          %img{:src=>""}
+        .media-body
+          %h4.media-heading
+            4.  Choosing a Healthy Teenage Lifestyle
+          %p
+            It’s true that it’s what’s on the inside that counts.  We know you’re fantastic.  We also know that sometimes a teenager needs a little help getting organized.  So let us help you to straighten out that difficult path to protect your future health.  The fight against disease begins now before you get it.  Whether is weight loss, strength training or just plain stress management our proven program of exercise and nutritional counseling can set you on the right path for life.  And it’s built around what you like to do not what we think you need to do.  You’re nearly grown we respect that.  Two or three sessions a week.
+
+
+      .media
+        %a.media-left.media-middle{:href=>"#"}
+          %img{:src=>""}
+        .media-body
+          %h4.media-heading
+            5.  Weight Loss and Weight Control
+          %p
+            OK. So lets be honest about this.  You need to get your weight under control for whatever reason.  That’s your business.  Ours is to help you do it.  We don’t care how you got here but we do care how you go forward and fad dieting and boot camp exercise aren’t going to solve your problem long term.  Our proven methods of appropriate exercise, realistic nutritional counseling and consistent manageable weight loss will.  Take control of your problem.  We will help you in the gym, out of the gym and at the dinner table at home or in a restaurant.  Initial commitment three sessions/week.
