--- a/app/views/home/faq.html.haml
+++ b/app/views/home/faq.html.haml
@@ -198,3 +198,58 @@
             .panel-body
               %p
                 Teens are still growing.  They require more cardio and sport and less resistance training therefore their programs contain more of those components.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-19", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Some overweight teens are self-conscious.  How do you handle that?
+          #collapse-19.panel-collapse.collapse
+            .panel-body
+              %p
+                We listen to what they’re saying and adjust their training accordingly.  We encourage them to work out with a buddy of similar ability.  That experience builds friendship and camaraderie, something these kids are often lacking and sorely need.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-20", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What if they don’t have a friend to enter the program with but want a buddy?
+          #collapse-20.panel-collapse.collapse
+            .panel-body
+              %p
+                We will try to match them up with other participants in the same situation of similar age and ability.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-21", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                How difficult is the exercise component of weight loss program?
+          #collapse-21.panel-collapse.collapse
+            .panel-body
+              %p
+                Not difficult at all.  All exercise is tailored to the participant’s level of function.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-22", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                What is the nutritional counseling component like?
+          #collapse-22.panel-collapse.collapse
+            .panel-body
+              %p
+                There is an initial review of current eating patterns and pitfalls.  Then we tailor a program to improve the client’s ability to eat properly and healthily without additional stress.  Food is a stress point for many people.  Our goal is to change your relationship with food both in the home and outside.
+
+
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{:href => "#collapse-23", :"data-toggle" => "collapse", :"data-parent" => "#accordion"}
+                Why “Buddy Training?”
+          #collapse-23.panel-collapse.collapse
+            .panel-body
+              %p
+                I started my workout program with a trainer and eventually went solo.  I had great results with both but it wasn’t until I started working out with a partner that I experienced my best results.  Buddies push each other and at the same time support each other.  They know when to tell you to push a little harder or to take it down a notch so as not to hurt yourself.  It’s very intimate and it builds a deep friendship.  And who doesn’t need a friend?  While we’d like you to keep coming back three days a week forever we know that’s not realistic.  What we want for you is to establish the healthiest lifestyle you can.  Working with a trainer will help you learn that and do that.  Working with a trainer and a buddy will insure that when you’re done with us you have someone to keep at it with.
