--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
       %small
         Achieve your goals
     %p
-      Go from where you are now to where you want to be
+      Wellness is an obtainable goal and we can help you to achieve it.
 
     .btn-egroup
       =link_to "Get in touch", new_message_path, :class=>"btn btn-lg btn-primary"
@@ -15,31 +15,31 @@
 .container
   .row
     .col-lg-9
-      %section
-        .page-header#section-testimonials
-          %h2
-            Testimonials
-            %small
-              This is what my customers are saying about me.
+      / %section
+      /   .page-header#section-testimonials
+      /     %h2
+      /       Testimonials
+      /       %small
+      /         This is what my customers are saying about me.
 
-        .row
-          .col-lg-4
-            %blockquote
-              %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-              %footer
-                Lien
-          .col-lg-4
-            %blockquote
-              %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-              %footer
-                Rob
-          .col-lg-4
-            %blockquote
-              %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-              %footer
-                Cathy
+      /   .row
+      /     .col-lg-4
+      /       %blockquote
+      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
+      /         %footer
+      /           Lien
+      /     .col-lg-4
+      /       %blockquote
+      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
+      /         %footer
+      /           Rob
+      /     .col-lg-4
+      /       %blockquote
+      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
+      /         %footer
+      /           Cathy
 
-      %section
+      %section.programs
         .page-header#section-programs
           %h2
             Programs
@@ -51,33 +51,34 @@
             =image_tag 'program3.jpg', {:class => 'img-responsive'}
           .col-md-8
             %h3
-              Program Title
+              Diabetes Management and/or Prevention
             %p
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt error laborum quod cupiditate alias fugit quidem soluta debitis voluptates magnam eos eligendi. Laboriosam nulla et optio modi minus quis molestias.
+              Are you diabetic or ‘pre-diabetic? Does diabetes run in your family?  Let someone who has traveled that road help you.  Our diabetes management and prevention program has proven results.
               =link_to "Read More", programs_path
 
         %hr
 
         .row
+          .col-md-4
+            =image_tag 'elderly.jpg', {:class => 'img-responsive'}
           .col-md-8
             %h3
-              Program Title
+              Maintaining General Health past 50
             %p
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt error laborum quod cupiditate alias fugit quidem soluta debitis voluptates magnam eos eligendi. Laboriosam nulla et optio modi minus quis molestias.
+              In reasonably good health but want to get back to feeling great?  It’s easier than you think.  We will design an exercise program for you both in and out of the gym to meet your needs, exercise preferences and schedule while optimizing your time; once, twice or three times a week.  We specialize in mature adults.
               =link_to "Read More", programs_path
-          .col-md-4
-            =image_tag 'program2.jpg', {:class => 'img-responsive'}
+
 
         %hr
 
         .row
           .col-md-4
-            =image_tag 'program1.jpg', {:class => 'img-responsive'}
+            =image_tag 'bodysculpting.jpg', {:class => 'img-responsive'}
           .col-md-8
             %h3
-              Program Title
+              Body Sculpting for Women
             %p
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt error laborum quod cupiditate alias fugit quidem soluta debitis voluptates magnam eos eligendi. Laboriosam nulla et optio modi minus quis molestias.
+              At any age women seek to keep their bodies healthy and trim.  Light resistance exercise with both body weight and light free weights is the best way to achieve that goal in conjunction with the correct amount of cardio.
               =link_to "Read More", programs_path
 
       /end programs
