--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -52,4 +52,9 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+  border-top: 1px solid #bbb;
+}
+
+.programs {
+  margin-bottom: 20px;
 }
