--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,8 +23,8 @@
           %ul.nav.navbar-nav
             %li
               %a{:href => "/"} Home
-            %li
-              %a{:href => "/#section-testimonials"} Testimonials
+            / %li
+            /   %a{:href => "/#section-testimonials"} Testimonials
             %li
               =link_to "Programs", programs_path
             %li
