--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -44,6 +44,7 @@
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  font-family: Montserrat, sans-serif;
 }
 .footer {
   position: absolute;
