--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,29 +15,44 @@
 .container
   .row
     .col-lg-9
-      / %section
-      /   .page-header#section-testimonials
-      /     %h2
-      /       Testimonials
-      /       %small
-      /         This is what my customers are saying about me.
+      %section
+        .page-header#section-testimonials
+          %h2
+            Testimonials
+            %small
+              This is what my customers are saying about me.
 
-      /   .row
-      /     .col-lg-4
-      /       %blockquote
-      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-      /         %footer
-      /           Lien
-      /     .col-lg-4
-      /       %blockquote
-      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-      /         %footer
-      /           Rob
-      /     .col-lg-4
-      /       %blockquote
-      /         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis error facilis quaerat reprehenderit ullam iure minima totam consectetur accusamus saepe id autem facere quod ex maxime reiciendis alias vel voluptatibus!
-      /         %footer
-      /           Cathy
+        .row
+          .col-lg-4
+            %blockquote
+              %p
+                I came to Focused Fitness NYC a couple years ago.  I was nearly 400 lbs and could
+                barely walk.  FFNYC prepared me for bariatric surgery.  I became strong enough to
+                recover from the operation quickly.  I have lost over 100 lbs and am able to walk
+                normally and exercise nearly every day.  I owe my life to FFNYC
+              %footer
+                Joel
+          .col-lg-4
+            %blockquote
+              %p
+                FFNYC helped me to get on the right track.  I had a history of exercise but at 50
+                wasn’t getting the bang for the buck I once did.  My workouts weren’t maintaining
+                my muscle tone or my weight.  FFNYC taught me that exercise changes as we age.  I
+                was following a program appropriate for someone much younger, heavy cardio and
+                very little resistance.  FFNYC’s body resistance program was what I needed.  In four
+                months I learned enough to continue on my own.
+              %footer
+                Diane
+          .col-lg-4
+            %blockquote
+              %p
+                I hated exercise all my life.  I didn’t like to sweat and I didn’t want to feel the pain of
+                waking up my muscles.  In the meantime I developed diabetes, high blood pressure
+                and other metabolic problems.  FFNYC started me slowly so I would come back.
+                After two years I moved away but I’ve continued to exercise the FFNYC way and
+                have made it a part of my life.
+              %footer
+                Edward
 
       %section.programs
         .page-header#section-programs
@@ -92,7 +107,7 @@
             Alan Sidransky
         .panel-body
           %p
-            =image_tag 'program1.jpg', {:class => 'img-responsive'}
+            =image_tag 'alan.jpg', {:class => 'img-responsive'}
           %p
             Wellness is an obtainable goal and we can help you to achieve it. Whether you’ve come here to lose
             weight, shape up or manage your health you’re in the right place. Our Focused Fitness NYC programs
