--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,7 +33,7 @@
             %li
               =link_to "About", about_path
             %li
-              =link_to "Conact Me", new_message_path
+              =link_to "Contact Me", new_message_path
               / %a{:href => "#section-contact"} Contact
 
     .container
@@ -68,7 +68,7 @@
             %li
               %a{:href=>"#"} Twitter
             %li
-              %a{:href=>"#"} Facebook
+              %a{:href=>"https://www.facebook.com/pages/FOCUSED-FITNESS-NYC/340306392766", :target => "_blank"} Facebook
 
           %p
             &copy; Copyright Focused Fitness NYC 2014
