--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -6,7 +6,9 @@
       .col-lg-4
         %p Please use this form to contact me about getting in shape
         %address
-          68thst at broadway
+          Locations available throughout Manhattan or in your building gym or apartment
+        %address
+          ph: 917-282-5553
       .col-lg-8
         =form_for @message, :html => {:class => 'form-horizontal'} do |f|
           -if @message.errors.any?
